--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project Title</title>
+        <title>Kanban Calendar</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/45b0368e95.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <!-- Add base html here. -->
-        
-        {% block content %}
+
+        {% block content %}{% endblock %}
+
+        <script src="/static/index.js"></script>
     </body>
 </html>
