--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,1 +1,252 @@
-/* Add styles here. */
+:root {
+    --dark-gray: #252525;
+    --light-gray: #494949;
+    --green: #00A88B;
+    --blue: #307FE2;
+    --purple: #6A6DCD;
+    --pink: #C340A1;
+    --red: #D93535;
+}
+
+body {
+    background-color: var(--dark-gray) !important;
+    color: white !important;
+    padding-left: 2vh;
+    padding-right: 2vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+label {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 150%;
+}
+
+input {
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    min-height: 3vh;
+    color: white !important;
+    outline: none;
+    padding: 5px 5px 5px 10px;
+    background: none;
+    border: 2px solid white;
+}
+
+textarea {
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    min-height: 3vh;
+    color: white !important;
+    outline: none;
+    padding: 5px 5px 5px 10px;
+    background: none;
+    border: 2px solid white;
+}
+
+select {
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    min-height: 3vh;
+    color: white !important;
+    outline: none;
+    padding: 10px 5px 5px 10px;
+    background: none;
+    border: 2px solid white;
+}
+
+input[type="date"] {
+    color: white !important;
+}
+
+input[type="color"] {
+    border-radius: 100%;
+    height: 60px;
+    width: 60px;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+    padding: 0;
+    overflow: hidden;
+}
+
+.row {
+    margin: 0px 0px 20px 20px;
+}
+
+.button {
+    color: white !important;
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 150%;
+    cursor: pointer;
+}
+
+.button-event {
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.button-event-gray {
+    color: var(--light-gray);
+    border: 1px solid var(--light-gray) !important;
+}
+
+.button-event-gray:hover {
+    background: var(--light-gray);
+    border: none;
+    color: white;
+}
+
+.button-event-delete {
+    color: var(--red);
+    border: 1px solid var(--red) !important;
+}
+
+.button-event-delete:hover {
+    background: var(--red);
+    border: none;
+    color: white;
+}
+
+.button-submit {
+    background: var(--blue);
+}
+
+.button-availability {
+    background: var(--green);
+}
+
+.button-delete {
+    background: var(--red);
+}
+
+.image-page {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: center;
+    overflow: hidden;
+    padding-bottom: 5rem;
+}
+
+.image-page img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.calendar_container {
+    display: flex;
+    flex-direction: row;
+    padding: 50px;
+}
+
+.employee_container {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 7.5px 0px 7.5px;
+}
+
+.event_container {
+    min-width: 289px;
+    max-width: 289px;
+    min-height: 184px;
+    /* background: var(--pink); */
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(18px);
+    margin-bottom: 15px;
+    color: white;
+}
+
+.event_space {
+    min-width: 289px;
+    max-width: 289px;
+    min-height: 184px !important;
+    background-color: var(--light-gray);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
+    color: white;
+    margin-bottom: 15px;
+}
+
+.action_space {
+    min-width: 289px;
+    max-width: 289px;
+    min-height: 184px !important;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
+    color: white;
+    margin-bottom: 15px;
+}
+
+.border-green {
+    border: 2px solid var(--green);
+}
+
+.border-green:hover {
+    border: none;
+    background: var(--green);
+    transition: 0.4s ease;
+}
+
+.border-blue {
+    border: 2px solid var(--blue);
+}
+
+.border-blue:hover {
+    border: none;
+    background: var(--blue);
+    transition: 0.4s ease;
+}
+
+.text-white {
+    color: white !important;
+}
+
+.p-l {
+    padding-left: 40%;
+    padding-right: 40%;
+}
+
+.float-right {
+    float: right;
+}
+
+.color-gray {
+    color: var(--blue);
+}
