--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -2,33 +2,30 @@
 {% block home_content %}
 
 <div class="calendar_container">
-    {% for user in user_list %}
+    {% for user in users %}
         <div class="user_container">
-            <a href={{"/edit_user/" + user.id}}>
-                <h2 class="text-white">{{user.first_name + " " + user.last_name}} <i class="fas fa-pencil-alt float-right color-gray"></i></h2>
-            </a>
-                {% for key, value in user.events.items() %}
-                    {% if value == "" %}
-                        <a href={{"/new_event/" + user.id + "/" + date_full + "/" + key}}>
-                            <div class="event_space">
-                                <h4>Add Event</h4>
+            {% for key, value in user.events.items() %}
+                {% if value == "" %}
+                    <a href={{"/new_event/" + str(user.id) + "/" + date_full + "/" + key}}>
+                        <div class="event_space">
+                            <h4>Add Event</h4>
+                        </div>
+                    </a>
+                {% else %}
+                    <a href={{"/edit_event/" + value.id | string()}}>
+                        <div class="event_container" style="background: {{value.color}}">
+                            <div>
+                                <h3>{{value.title}}</h3>
+                                <p>
+                                    {{value.details}}
+                                </p>
+                                <p>
+                                    {{value.timeslot}}
+                                </p>
                             </div>
-                        </a>
-                    {% else %}
-                        <a href={{"/edit_event/" + value.id | string()}}>
-                            <div class="event_container" style="background: {{value.color}}">
-                                <div>
-                                    <h3>{{value.title}}</h3>
-                                    <p>
-                                        {{value.details}}
-                                    </p>
-                                    <p>
-                                        {{value.timeslot}}
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    {% endif %}
+                        </div>
+                    </a>
+                {% endif %}
             {% endfor %}
         </div>
     {% endfor %}
@@ -46,9 +43,9 @@
                 </div>
             </a>
         {% endif %}
-        <a href="/new_user">
+        <a href="/new_equipment">
             <div class="action_space border-blue">
-                <h4>Add user</h4>
+                <h4>New equipment</h4>
             </div>
         </a>
     </div>
