--- a/app/static/style.css
+++ b/app/static/style.css
@@ -174,7 +174,7 @@ input[type="color"] {
     padding: 50px;
 }
 
-.employee_container {
+.user_container {
     display: flex;
     flex-direction: column;
     margin: 0px 7.5px 0px 7.5px;
