--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,7 +4,7 @@
 
 <main class="row">
     <div class="col-12">
-        <h1>Login</h1>
+        <h1>Sign Up</h1>
     </div>
 
     <form class="col-12 col-md-6 col-lg-4" action="/signup" method="POST">
